force-app/main/default/objects/ServiceLog__c/ServiceLog__c.object-meta.xml
<CustomObject>
    <label>Service Log</label>
    <nameField>
        <displayFormat>SL-{0000}-{YYYY}.{MM}.{DD}</displayFormat>
        <label>Service Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>