force-app/main/default/objects/ServiceLog__c/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <label>Request Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>